Fixed background to include the cheetah's head on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -21,7 +21,7 @@
 .site-title-background {
 	margin-top: 10px;
 	background-image: url('/assets/img/title-cheetah.jpg');
-	background-position: top 0px left 0px;
+	background-position: top 0px left -100px;
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 400px;
